# book-game

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp
app/: CMakeLists.txt
app/controllers/: CMakeLists.txt
app/controllers/actions/: CMakeLists.txt  action.h  add_extra_info.cpp  add_extra_info.h  add_flask.cpp  add_flask.h  add_strength.cpp  add_strength.h  check_luck.cpp  check_luck.h  get_gold.cpp  get_gold.h  get_item.cpp  get_item.h  spend_flask.cpp  spend_flask.h  spend_strength.cpp  spend_strength.h
app/controllers/game/: CMakeLists.txt  game.cpp  game.h
app/handlers/: CMakeLists.txt
app/handlers/game/: CMakeLists.txt  game.cpp  game.h
app/models/: CMakeLists.txt
app/models/items/: CMakeLists.txt  amulet_with_bear_hair.cpp  amulet_with_bear_hair.h  awesome_diamant.cpp  awesome_diamant.h  claw_of_dragon.cpp  claw_of_dragon.h  comb.cpp  comb.h  deer_skin.cpp  deer_skin.h  food.cpp  food.h  fox_skin.cpp  fox_skin.h  gold_whistle.cpp  gold_whistle.h  item.cpp  item.h  key_ring.cpp  key_ring.h  lamp.cpp  lamp.h  magic_belt.cpp  magic_belt.h  silver_ring.cpp  silver_ring.h  stork_feather.cpp  stork_feather.h
app/models/level/: CMakeLists.txt  level.cpp  level.h
app/models/option/: CMakeLists.txt  option.cpp  option.h
app/models/player/: CMakeLists.txt  player.cpp  player.h
app/util/: CMakeLists.txt
app/util/decoder/: CMakeLists.txt  decoder.cpp  decoder.h
app/util/dice/: CMakeLists.txt  dice.cpp  dice.h
app/util/json/: CMakeLists.txt
app/views/: CMakeLists.txt
sources/application/: CMakeLists.txt  application.cpp  application.h
(+9 files in other folders)
